# CommonUtils

./: CMakeLists.txt  LICENSE  README.md
include/: utils.h
src/: os.cpp  os.h  utils.cpp
